docs: get rules controller
