# api/routes/rules_route.go
@@ -7,7 +7,7 @@ import (
 )
 
 func RulesRoute(router *gin.Engine) {
-	router.GET("/rules", controllers.GetAllRules())
+	router.GET("/rules", controllers.GetRules())
 	router.GET("/rules/:id", controllers.GetRule())
 	router.POST("/rules", controllers.AddRule())
 	router.DELETE("rules/:id", controllers.DeleteRule())
