# docs/swagger.json
@@ -1,11 +1,100 @@
 {
     "swagger": "2.0",
     "info": {
-        "description": "Toto-Game-Rule-Service API in Go using Gin framework.",
-        "title": "Toto-Game-Rule-Service API",
+        "description": "Toto Game Rule Service API in Go using Gin framework.",
+        "title": "Toto Game Rule Service API",
         "contact": {},
         "version": "1.0"
     },
     "host": "localhost:9090",
-    "paths": {}
+    "paths": {
+        "/rules": {
+            "get": {
+                "description": "Responds with the list of all rules as JSON.",
+                "produces": [
+                    "application/json"
+                ],
+                "tags": [
+                    "rules"
+                ],
+                "summary": "Get rules array",
+                "responses": {
+                    "200": {
+                        "description": "OK",
+                        "schema": {
+                            "$ref": "#/definitions/responses.RulesResponse"
+                        }
+                    }
+                }
+            }
+        }
+    },
+    "definitions": {
+        "models.Answer": {
+            "type": "object",
+            "required": [
+                "text"
+            ],
+            "properties": {
+                "order": {
+                    "type": "integer",
+                    "example": 1
+                },
+                "text": {
+                    "type": "string",
+                    "example": "12 o'clock"
+                }
+            }
+        },
+        "models.Rule": {
+            "type": "object",
+            "required": [
+                "answers",
+                "question"
+            ],
+            "properties": {
+                "answers": {
+                    "type": "array",
+                    "items": {
+                        "$ref": "#/definitions/models.Answer"
+                    }
+                },
+                "id": {
+                    "type": "string",
+                    "example": "634f787edc90bf2b7c868153"
+                },
+                "order": {
+                    "type": "integer",
+                    "example": 1
+                },
+                "question": {
+                    "type": "string",
+                    "example": "What time is it?"
+                }
+            }
+        },
+        "responses.RulesResponse": {
+            "type": "object",
+            "properties": {
+                "data": {
+                    "type": "array",
+                    "items": {
+                        "$ref": "#/definitions/models.Rule"
+                    }
+                },
+                "message": {
+                    "type": "string",
+                    "example": "success"
+                },
+                "results": {
+                    "type": "integer",
+                    "example": 1
+                },
+                "status": {
+                    "type": "integer",
+                    "example": 200
+                }
+            }
+        }
+    }
 }
